# stakr

./: LICENSE  README.md  pyproject.toml
src/stakr/: core.py  gui.py  utils.py
